<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="230dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_btn1"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/first_background"/>

    <TextView
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_btn2"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/first_background"/>

    <TextView
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_btn3"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/first_background"/>

    <TextView
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_btn4"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/first_background"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/nohearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/y" />
        <ImageView
            android:id="@+id/hearing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:src="@drawable/p" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:text="청각 장애인 ver" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:text="비장애인 ver" />
    </LinearLayout>

</LinearLayout>