<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:elevation="20dp"
            android:src="@drawable/logo_b" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/background1"
            android:background="@drawable/corner_round"
            android:backgroundTint="@color/first_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="100dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/id"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/id_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/password"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/password_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/black"
                    android:password="true"
                    tools:ignore="Deprecated" />

                <CheckBox
                    android:id="@+id/login_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="자동 로그인"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/corner_2_round"
                android:backgroundTint="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="50dp"
                    android:gravity="center|right"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="23dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</LinearLayout>